kubernetes/apps/mario/database/adminer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  type: ClusterIP
  selector:
    app: adminer
  ports:
    - port: 80
      targetPort: 8080
